snapshot-tests/tests/snapshots/de__unknown_field.snap
---
source: snapshot-tests/tests/de.rs
expression: error
---
error[unexpected-key]: unexpected key `this-field-is-not-known` at this-field-is-not-known
  ┌─ unknown_field:2:1
  │
2 │ this-field-is-not-known = 20
  │ ^^^^^^^^^^^^^^^^^^^^^^^ unexpected key
